# mcwlasercontroller

./: CMakeLists.txt  CMakePresets.json  OsTechProtocols.c  OsTechProtocols.h  OstechDevice.h  README.md  Resource.h  SerialPortProtocols.c  SerialPortProtocols.h  main.c  mcwlaser.cpp.disabled  mcwlaser.rc  mcwlaser.sln  mcwlaser.vcxproj  mcwlaser.vcxproj.filters
gui/: CMakeLists.txt  gui.cpp
include/: OsTechProtocols.h  SerialPortProtocols.h  framework.h  lumicscomm.h  serial-win.h
src/: OsTechProtocols.c  SerialPortProtocols.c  console.c  gui.cpp  main.c  threadsafety.c
src/app/: console.c  gui.cpp
src/comm/: OsTechProtocols.c  lumics.c  serial-win.c
test/: CMakeLists.txt  gui.cpp
